tests/negative/semantic/wrong_arg_count_startswith/input.ci
void main() {
    print(toString(startsWith("a")) + "\n");
}
